--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<!-- Final Mobile index.html content -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>HLL Unit Viewer (Mobile)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <h1>HLL Unit Viewer</h1>
+      <button id="mode-toggle" onclick="toggleMode()">🌙</button>
+    </div>
+
+    <div class="controls-row">
+      <select id="category-select"></select>
+      <div id="variation-buttons"></div>
+      <button id="fullscreen-toggle" onclick="enterFullscreen()">⛶</button>
+    </div>
+
+    <div class="image-block">
+      <img id="army-image" src="german.jpg" alt="Unit Image" />
+    </div>
+
+    <div class="map-selector">
+      <label for="map-dropdown">Select map:</label>
+      <select id="map-dropdown"></select>
+      <div id="map-result" class="map-result"></div>
+    </div>
+
+    <a href="https://buymeacoffee.com/sgtfjolle" target="_blank">
+      <img class="banner" src="banner.ad.jpg" alt="Support Banner" />
+    </a>
+  </div>
+
+  <div id="fullscreen-overlay" class="fullscreen-hidden">
+    <img id="fullscreen-image" src="" alt="Fullscreen Unit" />
+    <button id="exit-fullscreen" onclick="exitFullscreen()">✕</button>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
