--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
+  <div id="bg-layer"></div>
+   <div class="container">
     <div class="header">
       <h1>Tank Recognition Tool</h1>
       <button id="mode-toggle" onclick="toggleMode()">🌙</button>
