--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div id="bg-wrapper">
   <div id="bg-layer"></div>
+</div>
    <div class="container">
     <div class="header">
       <h1>Tank Recognition Tool</h1>
